--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
 		"php": ">=5.6.0",
 		"yiisoft/yii2": "~2.0.14",
 		"yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-		"p2made/p2y2-things": "^5.0",
-		"p2made/p2y2-things-demo": "^5.0",
-		"p2made/p2y2-startbootstrap-themes": "^5.0",
-		"p2made/p2y2-sb-admin-theme": "^5.0"
+		"p2made/p2y2-things": "dev-5.0.0-dev",
+		"p2made/p2y2-things-demo": "dev-5.0.0-dev",
+		"p2made/p2y2-startbootstrap-themes": "dev-5.0.0-dev",
+		"p2made/p2y2-sb-admin-theme": "dev-5.0.0-dev"
 	}
 }
